crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badShaderScopeParent.usda
version https://git-lfs.github.com/spec/v1
oid sha256:c909e8fe9b44c37c5a2eb9138be83cb28fb3a12bc7bab85a03bc2b184f89625e
size 420
